--- a/frontend/src/app/department/department.component.html
+++ b/frontend/src/app/department/department.component.html
@@ -76,7 +76,7 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">{{ modalTitle }}</h5>
